@@ -195,6 +195,13 @@ and <b>abort</b> execution and transaction and fail task.</p>
   <td width="10%" valign="top">No, default <em>false</em></td>
 </tr>
 
+<tr>
+  <td width="12%" valign="top">failOnConnectionError</td>
+  <td width="78%" valign="top">If false, will only print a warning
+    message and not execute any statement if the task fails to connect
+    to the database.  <em>Since Ant 1.8.0</em>.</td>
+  <td width="10%" valign="top">No, default <em>true</em></td>
+</tr>
 </table>
 
 <h3>Parameters specified as nested elements</h3>
